--- a/app/views/home/_about.html.erb
+++ b/app/views/home/_about.html.erb
@@ -28,7 +28,7 @@
                         <i class='bx bx-chevron-right text-primary dark:text-primary-500 text-2xl'></i>
                     </div>
                 </div>
-                <%= render partial: 'shared/social_icons', locals: { icon_classes: "text-primary dark:text-primary-500 hover:text-yellow" } %>
+                <%= render partial: 'shared/social_icons', locals: { icon_classes: "text-primary dark:text-primary-500 hover:text-yellow dark:hover:text-yellow" } %>
             </div>
         </div>
 
