--- a/app/javascript/stylesheets/application.css
+++ b/app/javascript/stylesheets/application.css
@@ -12,3 +12,10 @@ html {
 }
 
 @tailwind utilities;
+
+.bg-light {
+    background-image: url(../images/home/experience-figure.svg);
+}
+.bg-dark {
+    background-image: url(../images/home/experience-figure.svg);
+}
