--- a/app/views/home/_work.html.erb
+++ b/app/views/home/_work.html.erb
@@ -116,7 +116,7 @@
         </div>
         <div class="flex justify-center mt-8">
             <a href="https://www.linkedin.com/in/benradler/" target="_blank"
-                class="bg-primary hover:bg-primary-60 font-header font-bold text-lg text-white px-8 py-3 flex justify-center mt-5 rounded items-center uppercase">
+                class="bg-primary dark:bg-primary-80 hover:bg-primary-60 dark:hover:bg-primary-100 transition-colors font-header font-bold text-lg text-white px-8 py-3 flex justify-center mt-5 rounded items-center uppercase">
                 Let's Connect
                 <i class="bx bxl-linkedin-square text-3xl relative -right-2"></i>
             </a>
