--- a/app/views/home/_games.html.erb
+++ b/app/views/home/_games.html.erb
@@ -83,7 +83,7 @@
 
                 <div class="flex justify-center lg:justify-start">
                     <a href="https://apps.apple.com/us/app/squarecrusher/id1518515040" target="_blank"
-                        class="bg-primary dark:hover:bg-primary-60 font-header font-bold text-lg text-white px-8 py-3 flex justify-center mt-5 rounded items-center uppercase">
+                        class="bg-primary dark:bg-primary-80 hover:bg-primary-60 dark:hover:bg-primary-100 transition-colors font-header font-bold text-lg text-white px-8 py-3 flex justify-center mt-5 rounded items-center uppercase">
                         Download Now
                         <i class="bx bxs-cloud-download text-3xl relative -right-2"></i>
                     </a>
