--- a/app/views/home/_latest.html.erb
+++ b/app/views/home/_latest.html.erb
@@ -20,7 +20,7 @@
                                 <span class="font-body font-semibold text-lg text-black dark:text-gray-100 block"><%= post.title %></span>
                                 <span class="font-body text-grey-20 dark:text-gray-300 pt-2 block"><%= post.description %></span>
                                 <span
-                                    class="bg-primary hover:bg-primary-60 font-header font-bold text-lg text-white px-8 py-3 flex justify-center mt-5 rounded items-center uppercase">
+                                    class="bg-primary dark:bg-primary-80 hover:bg-primary-60 dark:hover:bg-primary-100 transition-colors font-header font-bold text-lg text-white px-8 py-3 flex justify-center mt-5 rounded items-center uppercase">
                                     Read More
                                 </span>
                             </div>
