make consistent the blocks in latest, videos, expertise

--- a/app/views/home/_expertise.html.erb
+++ b/app/views/home/_expertise.html.erb
@@ -18,9 +18,9 @@
                 </div>
                 <div class="text-center">
                     <h3
-                        class="font-semibold text-lg lg:text-xl text-primary dark:text-gray-100 primary-500 uppercase pt-8 group-hover:text-yellow">
+                        class="font-semibold text-lg lg:text-xl text-primary dark:text-primary-1000 primary-500 uppercase pt-8 group-hover:text-yellow">
                         Software Engineering</h3>
-                    <p class="text-sm md:text-base text-grey dark:text-gray-100 pt-4 group-hover:text-white dark:group-hover:opacity-70">
+                    <p class="text-sm md:text-base text-grey dark:text-primary-700 pt-4 group-hover:text-white dark:group-hover:opacity-70">
                         Frontend and backend development using microservices.
                     </p>
                 </div>
@@ -37,9 +37,9 @@
                 </div>
                 <div class="text-center">
                     <h3
-                        class="font-semibold text-lg lg:text-xl text-primary dark:text-gray-100 primary-500 uppercase pt-8 group-hover:text-yellow">
+                        class="font-semibold text-lg lg:text-xl text-primary dark:text-primary-1000 primary-500 uppercase pt-8 group-hover:text-yellow">
                         <span class="normal-case">iOS</span> Game Development</h3>
-                    <p class="text-sm md:text-base text-grey dark:text-gray-100 pt-4 group-hover:text-white dark:group-hover:opacity-70">
+                    <p class="text-sm md:text-base text-grey dark:text-primary-700 pt-4 group-hover:text-white dark:group-hover:opacity-70">
                         2D arcade-style games built with SpriteKit.
                     </p>
                 </div>
@@ -56,9 +56,9 @@
                 </div>
                 <div class="text-center">
                     <h3
-                        class="font-semibold text-lg lg:text-xl text-primary dark:text-gray-100 primary-500 uppercase pt-8 group-hover:text-yellow">
+                        class="font-semibold text-lg lg:text-xl text-primary dark:text-primary-1000 primary-500 uppercase pt-8 group-hover:text-yellow">
                         Film & Photography</h3>
-                    <p class="text-sm md:text-base text-grey dark:text-gray-100 pt-4 group-hover:text-white dark:group-hover:opacity-70">
+                    <p class="text-sm md:text-base text-grey dark:text-primary-700 pt-4 group-hover:text-white dark:group-hover:opacity-70">
                         Product photography, advertisement spots, and short films.
                     </p>
                 </div>
