--- a/app/views/home/_latest.html.erb
+++ b/app/views/home/_latest.html.erb
@@ -17,8 +17,8 @@
                                     class="bg-cover bg-no-repeat bg-center absolute inset-0 opacity-10 transition-opacity group-hover:opacity-50 block bg-gradient-to-b from-blog-gradient-from to-blog-gradient-to"></span>
                             </div>
                             <div class="py-6 xl:py-8 px-5">
-                                <span class="font-body font-semibold text-lg text-black dark:text-gray-100 block"><%= post.title %></span>
-                                <span class="font-body text-grey-20 dark:text-gray-300 pt-2 block"><%= post.description %></span>
+                                <span class="font-body font-semibold text-lg text-black dark:text-primary-1000 block"><%= post.title %></span>
+                                <span class="font-body text-grey-20 dark:text-primary-700 pt-2 block"><%= post.description %></span>
                                 <span
                                     class="bg-primary dark:bg-primary-80 hover:bg-primary-60 dark:hover:bg-primary-100 transition-colors font-header font-bold text-lg text-white px-8 py-3 flex justify-center mt-5 rounded items-center uppercase">
                                     Read More
