--- a/app/views/home/_videos.html.erb
+++ b/app/views/home/_videos.html.erb
@@ -13,9 +13,9 @@
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/FHebqAXUJGo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 <div class="text-center">
                     <h3
-                        class="font-semibold text-lg lg:text-xl text-primary dark:text-gray-100 uppercase pt-8">
+                        class="font-semibold text-lg lg:text-xl text-primary dark:text-primary-1000 uppercase pt-8">
                         BMW Advertisement</h3>
-                    <p class="text-sm md:text-base text-grey dark:text-gray-100 pt-4 px-4">
+                    <p class="text-sm md:text-base text-grey dark:text-primary-700 pt-4 px-4">
                         A mock advertisement for <span class="font-black">The Ultimate Driving Machine</span>
                     </p>
                 </div>
@@ -25,9 +25,9 @@
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/AMzBQlTWPHU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 <div class="text-center">
                     <h3
-                        class="font-semibold text-lg lg:text-xl text-primary dark:text-gray-100 uppercase pt-8">
+                        class="font-semibold text-lg lg:text-xl text-primary dark:text-primary-1000 uppercase pt-8">
                         The Storm</h3>
-                    <p class="text-sm md:text-base text-grey dark:text-gray-100 pt-4 px-4">
+                    <p class="text-sm md:text-base text-grey dark:text-primary-700 pt-4 px-4">
                         A short, <span class="font-black">super-slow-motion</span> cinematic film about snow
                     </p>
                 </div>
@@ -37,9 +37,9 @@
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/Mdk78fR0ihw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 <div class="text-center">
                     <h3
-                        class="font-semibold text-lg lg:text-xl text-primary dark:text-gray-100 uppercase pt-8">
+                        class="font-semibold text-lg lg:text-xl text-primary dark:text-primary-1000 uppercase pt-8">
                         Magician Ramana</h3>
-                    <p class="text-sm md:text-base text-grey dark:text-gray-100 pt-4 px-4">
+                    <p class="text-sm md:text-base text-grey dark:text-primary-700 pt-4 px-4">
                         My most-viewed video, with nearly <span class="font-black">16 million views,</span> features famous Dutch Magician Ramana
                     </p>
                 </div>
