--- a/app/views/home/_games.html.erb
+++ b/app/views/home/_games.html.erb
@@ -1,4 +1,4 @@
-<div class="dark:bg-primary-40" id="games">
+<div class="dark:bg-primary-20 lg:dark:bg-primary-40" id="games">
     <div class="container py-16 md:py-20">
         <div class="w-full text-center lg:text-left">
             <h2 class="font-header font-semibold text-primary dark:text-primary-1000 text-4xl sm:text-5xl lg:text-6xl uppercase">
