--- a/app/views/home/_latest.html.erb
+++ b/app/views/home/_latest.html.erb
@@ -1,4 +1,4 @@
-<div class="dark:bg-primary-40" id="latest">
+<div class="dark:bg-primary-20 lg:dark:bg-primary-40" id="latest">
     <div class="container py-16 md:py-20">
         <h2
             class="font-header font-semibold text-primary dark:text-primary-1000 text-4xl sm:text-5xl lg:text-6xl uppercase text-center">
