center hero text in medium breakpoint

--- a/app/views/home/_hero.html.erb
+++ b/app/views/home/_hero.html.erb
@@ -12,7 +12,7 @@
             </div>
             <div class="lg:pl-8 pt-8 sm:pt-10 lg:pt-0">
                 <h1
-                    class="font-header text-white text-4xl sm:text-5xl md:text-6xl text-center sm:text-left">
+                    class="font-header text-white text-4xl sm:text-5xl md:text-6xl text-center lg:text-left">
                     <div class="font-bold uppercase">Ben Radler</div>
                     <div class="font-thin uppercase">Software Engineer</div>
                 </h1>
