styling for non-homepage

--- a/app/views/blog/posts/index.html.erb
+++ b/app/views/blog/posts/index.html.erb
@@ -1,7 +1,7 @@
 <% set_meta_tags title: 'Coding, Hacking, Gadgets, and Technology Blog',
                 description: 'Ben Radler is an Engineer in San Francisco. He uses technology like Ruby, Rails, Javascript, Node.js' %>
 
-<div>
+<div class="dark:bg-primary-20">
     <div class="container py-6 md:py-10 mt-12 sm:mt-16 lg:mt-24 xl:mt-16">
       <% @posts.each do |post| %>
         <div class="max-w-4xl mx-auto mb-20 border-b pb-5 border-lila" id="post-<%= post.id %>" role="article"  itemscope='' itemtype='http://schema.org/Article'>
