--- a/app/views/shared/_page.html.slim
+++ b/app/views/shared/_page.html.slim
@@ -1,4 +1,4 @@
-div id="#{controller_name}-#{action_name}"
+div[id="#{controller_name}-#{action_name}" class="dark:bg-primary-20"]
   div[class="container py-6 md:py-10 mt-12 sm:mt-16 lg:mt-24 xl:mt-16"]
     div[class="max-w-4xl mx-auto"]
       h1[class="font-body font-semibold text-primary dark:text-primary-500 text-3xl sm:text-4xl md:text-5xl xl:text-6xl pt-5"]
