--- a/app/views/errors/unprocessable_entity.slim
+++ b/app/views/errors/unprocessable_entity.slim
@@ -1,7 +1,11 @@
 - set_meta_tags title: '422 - Unprocessable Entity', description: '422 - Unprocessable Entity'
 - content_for :page_title, '422 - Unprocessable Entity'
+- content_for :page_icon, content_tag(:i, nil, class: 'bx bx-bug text-9xl text-primary mr-4')
 
-p[class="font-body text-grey-10 pt-5"]
-    = "Sorry, seems like you're trying to do something you shouldn't! "
-    = link_to 'Contact me here', page_path('contact-me'), class: "text-primary"
+p[class="flex flex-auto items-center font-body text-grey-10 dark:text-primary-900 pt-5"]
+    i[class='bx bx-sad text-5xl text-primary mr-4']
+    = "Sorry, seems like you're trying to do something you shouldn't!"
+
+p[class="font-body text-grey-10 dark:text-primary-900 pt-5"]
+    = link_to 'Contact me', page_path('contact-me'), class: "text-primary dark:text-primary-300 dark:hover:text-primary-500 hover:underline"
     = " if you believe you received this error by mistake."
