--- a/app/views/pages/squarecrusher/privacy-policy.html.slim
+++ b/app/views/pages/squarecrusher/privacy-policy.html.slim
@@ -4,39 +4,39 @@
 - content_for :page_title, 'SquareCrusher! Privacy Policy'
 
 div[class="w-full pt-5 lg:pt-6"]
-  h4[class="font-header font-medium text-black text-xl sm:text-2xl lg:text-3xl pt-6"]
+  h4[class="font-header font-medium text-black dark:text-primary-400 text-xl sm:text-2xl lg:text-3xl pt-6"]
     | Privacy Policy
-  p[class="w-full sm:w-2/3 pt-2 lg:pt-3 font-body text-grey-10"]
+  p[class="w-full sm:w-2/3 pt-2 lg:pt-3 font-body text-grey-10 dark:text-primary-900"]
     |  Ben Radler built the SquareCrusher! app as
     |  an Ad Supported app. This SERVICE is provided by
     |  Ben Radler at no cost and is intended for use as
     |  is.
-  p[class="w-full sm:w-2/3 pt-2 lg:pt-3 font-body text-grey-10"]
+  p[class="w-full sm:w-2/3 pt-2 lg:pt-3 font-body text-grey-10 dark:text-primary-900"]
     |  This page is used to inform visitors regarding my
     |  policies with the collection, use, and disclosure of Personal
     |  Information if anyone decided to use my Service.
-  p[class="w-full sm:w-2/3 pt-2 lg:pt-3 font-body text-grey-10"]
+  p[class="w-full sm:w-2/3 pt-2 lg:pt-3 font-body text-grey-10 dark:text-primary-900"]
     |  If you choose to use my Service, then you agree to
     |  the collection and use of information in relation to this
     |  policy. The Personal Information that I collect is
     |  used for providing and improving the Service. I will not use or share your information with
     |  anyone except as described in this Privacy Policy.
-  p[class="w-full sm:w-2/3 pt-2 lg:pt-3 font-body text-grey-10"]
+  p[class="w-full sm:w-2/3 pt-2 lg:pt-3 font-body text-grey-10 dark:text-primary-900"]
     |  The terms used in this Privacy Policy have the same meanings
     |  as in our Terms and Conditions, which is accessible at
     |  SquareCrusher! unless otherwise defined in this Privacy Policy.
-  h4[class="font-header font-medium text-black text-xl sm:text-2xl lg:text-3xl pt-12"]
+  h4[class="font-header font-medium text-black dark:text-primary-400 text-xl sm:text-2xl lg:text-3xl pt-12"]
     | Information Collection and Use
-  p[class="w-full sm:w-2/3 pt-2 lg:pt-3 font-body text-grey-10"]
+  p[class="w-full sm:w-2/3 pt-2 lg:pt-3 font-body text-grey-10 dark:text-primary-900"]
     |  For a better experience, while using our Service, I
     |  may require you to provide us with certain personally
     |  identifiable information, including but not limited to N/A. The information that
     |  I request will be retained on your device and is not collected by me in any way.
   div
-    p[class="w-full sm:w-2/3 pt-2 lg:pt-3 font-body text-grey-10"]
+    p[class="w-full sm:w-2/3 pt-2 lg:pt-3 font-body text-grey-10 dark:text-primary-900"]
       |  The app does use third party services that may collect
       |  information used to identify you.
-    p[class="w-full sm:w-2/3 pt-2 lg:pt-3 font-body text-grey-10"]
+    p[class="w-full sm:w-2/3 pt-2 lg:pt-3 font-body text-grey-10 dark:text-primary-900"]
       |  Link to privacy policy of third party service providers used
       |  by the app
     ul
@@ -46,9 +46,9 @@ div[class="w-full pt-5 lg:pt-6"]
         a href="https://firebase.google.com/policies/analytics" rel=("noopener noreferrer") target="_blank"  Google Analytics for Firebase
       li
         a href="https://privacy.oath.com" rel=("noopener noreferrer") target="_blank"  Flurry Analytics
-  h4[class="font-header font-medium text-black text-xl sm:text-2xl lg:text-3xl pt-12"]
+  h4[class="font-header font-medium text-black dark:text-primary-400 text-xl sm:text-2xl lg:text-3xl pt-12"]
     | Log Data
-  p[class="w-full sm:w-2/3 pt-2 lg:pt-3 font-body text-grey-10"]
+  p[class="w-full sm:w-2/3 pt-2 lg:pt-3 font-body text-grey-10 dark:text-primary-900"]
     |  I want to inform you that whenever you
     |  use my Service, in a case of an error in the app
     |  I collect data and information (through third party
@@ -58,14 +58,14 @@ div[class="w-full pt-5 lg:pt-6"]
     |  configuration of the app when utilizing my Service,
     |  the time and date of your use of the Service, and other
     |  statistics.
-  h4[class="font-header font-medium text-black text-xl sm:text-2xl lg:text-3xl pt-12"]
+  h4[class="font-header font-medium text-black dark:text-primary-400 text-xl sm:text-2xl lg:text-3xl pt-12"]
     | Cookies
-  p[class="w-full sm:w-2/3 pt-2 lg:pt-3 font-body text-grey-10"]
+  p[class="w-full sm:w-2/3 pt-2 lg:pt-3 font-body text-grey-10 dark:text-primary-900"]
     |  Cookies are files with a small amount of data that are
     |  commonly used as anonymous unique identifiers. These are sent
     |  to your browser from the websites that you visit and are
     |  stored on your device's internal memory.
-  p[class="w-full sm:w-2/3 pt-2 lg:pt-3 font-body text-grey-10"]
+  p[class="w-full sm:w-2/3 pt-2 lg:pt-3 font-body text-grey-10 dark:text-primary-900"]
     |  This Service does not use these “cookies” explicitly. However,
     |  the app may use third party code and libraries that use
     |  “cookies” to collect information and improve their services.
@@ -73,9 +73,9 @@ div[class="w-full pt-5 lg:pt-6"]
     |  and know when a cookie is being sent to your device. If you
     |  choose to refuse our cookies, you may not be able to use some
     |  portions of this Service.
-  h4[class="font-header font-medium text-black text-xl sm:text-2xl lg:text-3xl pt-12"]
+  h4[class="font-header font-medium text-black dark:text-primary-400 text-xl sm:text-2xl lg:text-3xl pt-12"]
     | Service Providers
-  p[class="w-full sm:w-2/3 pt-2 lg:pt-3 font-body text-grey-10"]
+  p[class="w-full sm:w-2/3 pt-2 lg:pt-3 font-body text-grey-10 dark:text-primary-900"]
     |  I may employ third-party companies and
     |  individuals due to the following reasons:
   ul
@@ -83,24 +83,24 @@ div[class="w-full pt-5 lg:pt-6"]
     li To provide the Service on our behalf;
     li To perform Service-related services; or
     li To assist us in analyzing how our Service is used.
-  p[class="w-full sm:w-2/3 pt-2 lg:pt-3 font-body text-grey-10"]
+  p[class="w-full sm:w-2/3 pt-2 lg:pt-3 font-body text-grey-10 dark:text-primary-900"]
     |  I want to inform users of this Service
     |  that these third parties have access to your Personal
     |  Information. The reason is to perform the tasks assigned to
     |  them on our behalf. However, they are obligated not to
     |  disclose or use the information for any other purpose.
-  h4[class="font-header font-medium text-black text-xl sm:text-2xl lg:text-3xl pt-12"]
+  h4[class="font-header font-medium text-black dark:text-primary-400 text-xl sm:text-2xl lg:text-3xl pt-12"]
     | Security
-  p[class="w-full sm:w-2/3 pt-2 lg:pt-3 font-body text-grey-10"]
+  p[class="w-full sm:w-2/3 pt-2 lg:pt-3 font-body text-grey-10 dark:text-primary-900"]
     |  I value your trust in providing us your
     |  Personal Information, thus we are striving to use commercially
     |  acceptable means of protecting it. But remember that no method
     |  of transmission over the internet, or method of electronic
     |  storage is 100% secure and reliable, and I cannot
     |  guarantee its absolute security.
-  h4[class="font-header font-medium text-black text-xl sm:text-2xl lg:text-3xl pt-12"]
+  h4[class="font-header font-medium text-black dark:text-primary-400 text-xl sm:text-2xl lg:text-3xl pt-12"]
     | Links to Other Sites
-  p[class="w-full sm:w-2/3 pt-2 lg:pt-3 font-body text-grey-10"]
+  p[class="w-full sm:w-2/3 pt-2 lg:pt-3 font-body text-grey-10 dark:text-primary-900"]
     |  This Service may contain links to other sites. If you click on
     |  a third-party link, you will be directed to that site. Note
     |  that these external sites are not operated by me.
@@ -109,9 +109,9 @@ div[class="w-full pt-5 lg:pt-6"]
     |  no control over and assume no responsibility for the content,
     |  privacy policies, or practices of any third-party sites or
     |  services.
-  h4[class="font-header font-medium text-black text-xl sm:text-2xl lg:text-3xl pt-12"]
+  h4[class="font-header font-medium text-black dark:text-primary-400 text-xl sm:text-2xl lg:text-3xl pt-12"]
     | Children’s Privacy
-  p[class="w-full sm:w-2/3 pt-2 lg:pt-3 font-body text-grey-10"]
+  p[class="w-full sm:w-2/3 pt-2 lg:pt-3 font-body text-grey-10 dark:text-primary-900"]
     |  These Services do not address anyone under the age of 13.
     |  I do not knowingly collect personally
     |  identifiable information from children under 13. In the case
@@ -121,21 +121,21 @@ div[class="w-full pt-5 lg:pt-6"]
     |  and you are aware that your child has provided us with
     |  personal information, please contact me so that
     |  I will be able to do necessary actions.
-  h4[class="font-header font-medium text-black text-xl sm:text-2xl lg:text-3xl pt-12"]
+  h4[class="font-header font-medium text-black dark:text-primary-400 text-xl sm:text-2xl lg:text-3xl pt-12"]
     | Changes to This Privacy Policy
-  p[class="w-full sm:w-2/3 pt-2 lg:pt-3 font-body text-grey-10"]
+  p[class="w-full sm:w-2/3 pt-2 lg:pt-3 font-body text-grey-10 dark:text-primary-900"]
     |  I may update our Privacy Policy from
     |  time to time. Thus, you are advised to review this page
     |  periodically for any changes. I will
     |  notify you of any changes by posting the new Privacy Policy on
     |  this page.
   p This policy is effective as of 2020-06-28
-  h4[class="font-header font-medium text-black text-xl sm:text-2xl lg:text-3xl pt-12"]
+  h4[class="font-header font-medium text-black dark:text-primary-400 text-xl sm:text-2xl lg:text-3xl pt-12"]
     | Contact Us
-  p[class="w-full sm:w-2/3 pt-2 lg:pt-3 font-body text-grey-10"]
+  p[class="w-full sm:w-2/3 pt-2 lg:pt-3 font-body text-grey-10 dark:text-primary-900"]
     |  If you have any questions or suggestions about my
     |  Privacy Policy, do not hesitate to contact me at dandydoozygames@gmail.com.
-  p[class="w-full sm:w-2/3 pt-2 lg:pt-3 font-body text-grey-10"]
+  p[class="w-full sm:w-2/3 pt-2 lg:pt-3 font-body text-grey-10 dark:text-primary-900"]
     |  This privacy policy page was created at
     a href="https://privacypolicytemplate.net" rel=("noopener noreferrer") target="_blank"  privacypolicytemplate.net
     |  and modified/generated by
