--- a/app/views/home/_work.html.erb
+++ b/app/views/home/_work.html.erb
@@ -1,5 +1,5 @@
 <div class="bg-cover bg-no-repeat dark:bg-primary-40 xs:bg-[center_top_1000rem] lg:bg-top pb-0 lg:pb-16 xl:px-16 bg-work-bg-light dark:bg-work-bg-dark" id="work">
-    <div class="bg-white dark:bg-primary-40 w-5/6 md:w-11/12 2xl:w-full mx-auto py-16 lg:py-20 xl:py-24">
+    <div class="bg-[#fff] dark:bg-primary-40 w-5/6 md:w-11/12 2xl:w-full mx-auto py-16 lg:py-20 xl:py-24">
         <h2 class="font-header font-semibold text-primary dark:text-primary-1000 text-4xl sm:text-5xl lg:text-6xl uppercase text-center">
             Work Experience</h2>
         <h3 class="font-header font-medium text-black dark:text-primary-400 text-xl sm:text-2xl lg:text-3xl pt-6 text-center">
