text sizing update for error pages

--- a/app/views/errors/file_not_found.slim
+++ b/app/views/errors/file_not_found.slim
@@ -1,6 +1,6 @@
 - set_meta_tags title: '404 - File Not Found', description: '404 - File Not Found'
 - content_for :page_title, '404 - File Not Found'
-- content_for :page_icon, content_tag(:i, nil, class: 'bx bx-error text-9xl text-primary mr-4')
+- content_for :page_icon, content_tag(:i, nil, class: 'bx bx-error text-5xl md:text-6xl lg:text-6xl xl:text-8xl text-primary mr-4')
 
 p[class="flex flex-auto items-center font-body text-grey-10 dark:text-primary-900 pt-5"]
     i[class='bx bx-sad text-5xl text-primary mr-4']
