--- a/app/views/errors/internal_server_error.slim
+++ b/app/views/errors/internal_server_error.slim
@@ -1,6 +1,6 @@
 - set_meta_tags title: '500 - Internal Server Error', description: '500 - Internal Server Error'
 - content_for :page_title, '500 - Internal Server Error'
-- content_for :page_icon, content_tag(:i, nil, class: 'bx bx-bug text-9xl text-primary mr-4')
+- content_for :page_icon, content_tag(:i, nil, class: 'bx bx-bug text-5xl md:text-6xl lg:text-6xl xl:text-8xl text-primary mr-4')
 
 p[class="flex flex-auto items-center font-body text-grey-10 dark:text-primary-900 pt-5"]
     i[class='bx bx-sad text-5xl text-primary mr-4']
