WIP on blog posts #show and #index

--- a/app/views/blog/posts/_meta.html.erb
+++ b/app/views/blog/posts/_meta.html.erb
@@ -1,5 +1,5 @@
 <div class="">
-    <h1 class="font-body font-semibold text-primary text-3xl sm:text-4xl md:text-5xl xl:text-6xl pt-5">
+    <h1 class="font-body font-semibold text-primary dark:text-primary-1000 text-3xl sm:text-4xl md:text-5xl xl:text-6xl pt-5">
         <%= link_to post.title, blog_posts_permalink_path(post), rel: "bookmark" %>
     </h1>
     <div class="flex items-center pt-5 md:pt-10">
