styling for static contact me page

--- a/app/views/pages/contact-me.html.erb
+++ b/app/views/pages/contact-me.html.erb
@@ -1,10 +1,10 @@
 <% set_meta_tags title: 'Contact Me', description: 'Contact Ben Radler for hiring or for help on Ruby, Rails, Node.js, Javascript' %>
 <% content_for :page_title, 'Contact Me' %>
 
-<h4 class="font-header font-medium text-black text-xl sm:text-2xl lg:text-3xl pt-6">
+<h4 class="font-header font-medium text-black dark:text-primary-400 text-xl sm:text-2xl lg:text-3xl pt-6">
   Have Any Questions?</h4>
 <div class="w-full sm:w-2/3 pt-5 lg:pt-6">
-  <p class="font-body text-grey-10">Please feel free to reach out. No question is too simple, no job is too large.
+  <p class="font-body text-grey-10 dark:text-primary-900">Please feel free to reach out. No question is too simple, no job is too large.
   </p>
 </div>
 
