--- a/app/views/shared/_social_icons.html.slim
+++ b/app/views/shared/_social_icons.html.slim
@@ -1,13 +1,13 @@
 - icon_classes ||= ""
 
 div[class="flex items-center justify-center sm:justify-start pt-5 sm:pt-0"]
-  a href="https://www.linkedin.com/in/benradler/" title="LinkedIn"
+  a[href="https://www.linkedin.com/in/benradler/" title="LinkedIn" target="_blank"]
     i[class="bx bxl-linkedin-square text-2xl #{icon_classes}"]
-  a.pl-4 href="https://github.com/lordnibbler/" title="Github"
+  a[class="pl-4" href="https://github.com/lordnibbler/" title="Github" target="_blank"]
     i[class="bx bxl-github text-2xl #{icon_classes}"]
-  a.pl-4 href="https://stackoverflow.com/users/418864/professormeowingtons" title="StackOverflow"
+  a[class="pl-4" href="https://stackoverflow.com/users/418864/professormeowingtons" title="StackOverflow" target="_blank"]
     i[class="bx bxl-stack-overflow text-2xl #{icon_classes}"]
-  a.pl-4 href="https://youtube.com/benradler" title="YouTube"
+  a[class="pl-4" href="https://youtube.com/benradler" title="YouTube" target="_blank"]
     i[class="bx bxl-youtube text-2xl #{icon_classes}"]
-  a.pl-4 href=("#{blog_posts_path(format: :rss)}") title=("RSS Feed")
+  a[class="pl-4" href=("#{blog_posts_path(format: :rss)}") title=("RSS Feed") target="_blank"]
     i[class="bx bx-rss text-2xl #{icon_classes}"]
