--- a/app/views/blog/posts/index.html.erb
+++ b/app/views/blog/posts/index.html.erb
@@ -1,21 +1,21 @@
 <% set_meta_tags title: 'Coding, Hacking, Gadgets, and Technology Blog',
                 description: 'Ben Radler is an Engineer in San Francisco. He uses technology like Ruby, Rails, Javascript, Node.js' %>
 
-<div>
-    <div class="container py-6 md:py-10 mt-12 sm:mt-16 lg:mt-24 xl:mt-16">
+<div class="dark:bg-primary-20">
+    <div class="container py-6 md:py-10 mt-12 sm:mt-16 lg:mt-18 xl:mt-16">
       <% @posts.each do |post| %>
-        <div class="max-w-4xl mx-auto mb-20 border-b pb-5 border-lila" id="post-<%= post.id %>" role="article"  itemscope='' itemtype='http://schema.org/Article'>
+        <div class="max-w-4xl mx-auto mb-20 border-b pb-8 border-lila dark:border-primary-70" id="post-<%= post.id %>" role="article"  itemscope='' itemtype='http://schema.org/Article'>
           <%= render partial: 'meta', locals: { post: post } %>
 
-          <div class="pt-8 prose max-w-full" itemprop="articleBody">
+          <div class="pt-8 prose max-w-full dark:text-primary-700" itemprop="articleBody">
             <%= image_tag cdn_image_url(post.featured_image), class: ".post-thumbnail" if post.featured_image.attached? %>
             <%= markdown post.excerpt %>
             <% if post.more_text? %>
               <a href="<%= blog_posts_permalink_path(post) %>" class="flex items-center no-underline">
-                  <span class="font-body font-bold text-primary text-lg uppercase block">
+                  <span class="font-body font-bold text-primary dark:text-primary-500 text-lg uppercase block">
                       Continue Reading
                   </span>
-                  <i class='bx bx-right-arrow-alt text-2xl text-primary'></i>
+                  <i class='bx bx-right-arrow-alt text-2xl text-primary dark:text-primary-500'></i>
               </a>
             <% end %>
           </div>
