--- a/app/views/errors/file_not_found.slim
+++ b/app/views/errors/file_not_found.slim
@@ -1,7 +1,11 @@
 - set_meta_tags title: '404 - File Not Found', description: '404 - File Not Found'
 - content_for :page_title, '404 - File Not Found'
+- content_for :page_icon, content_tag(:i, nil, class: 'bx bx-error text-5xl md:text-6xl lg:text-6xl xl:text-8xl text-primary mr-4')
 
-p[class="font-body text-grey-10 pt-5"]
-    = " The page you were looking for could not be found.  If you feel you reached a page that should exist, please "
-    = link_to 'contact me here', page_path('contact-me'), class: "text-primary"
-    = "."
+p[class="flex flex-auto items-center font-body text-grey-10 dark:text-primary-900 pt-5"]
+    i[class='bx bx-sad text-5xl text-primary mr-4']
+    = "The page you were looking for could not be found."
+
+p[class="font-body text-grey-10 dark:text-primary-900 pt-5"]
+    = link_to 'Contact me', page_path('contact-me'), class: "text-primary dark:text-primary-300 dark:hover:text-primary-500 hover:underline"
+    = " if you feel you reached a page that should exist."
