--- a/app/views/home/_hero.html.erb
+++ b/app/views/home/_hero.html.erb
@@ -1,8 +1,8 @@
 <div class="bg-center bg-cover bg-no-repeat relative py-8"
     style="background-image: url(<%= asset_pack_path("media/images/home/bg-hero.jpg") %>);">
-    
+
     <div
-        class="bg-center bg-cover bg-no-repeat absolute inset-0 z-20 bg-gradient-to-r from-hero-gradient-from to-hero-gradient-to">
+        class="bg-center bg-cover bg-no-repeat absolute inset-0 z-20 bg-gradient-to-r from-hero-gradient-from dark:from-hero-gradient-dark-from to-hero-gradient-to dark:to-hero-gradient-dark-to">
     </div>
 
     <div class="container z-30 relative pt-20 sm:pt-56 lg:pt-64 pb-12 sm:pb-48 lg:pb-48">
@@ -12,7 +12,7 @@
             </div>
             <div class="lg:pl-8 pt-8 sm:pt-10 lg:pt-0">
                 <h1
-                    class="font-header text-white text-4xl sm:text-5xl md:text-6xl text-center sm:text-left">
+                    class="font-header text-white text-4xl sm:text-5xl md:text-6xl text-center lg:text-left">
                     <div class="font-bold uppercase">Ben Radler</div>
                     <div class="font-thin uppercase">Software Engineer</div>
                 </h1>
