--- a/app/views/shared/_footer.html.slim
+++ b/app/views/shared/_footer.html.slim
@@ -1,4 +1,4 @@
-.bg-primary
+div[class='bg-primary dark:bg-primary-50']
   div[class="container py-6 flex flex-col sm:flex-row justify-between"]
     p[class="font-body text-white text-center md:text-left"]
       | © #{Time.now.year} #{link_to 'benradler.com', root_path}. I love you.
