social icons padding adjustments for footer

--- a/app/views/home/_hero.html.erb
+++ b/app/views/home/_hero.html.erb
@@ -18,7 +18,7 @@
                 </h1>
                 <div class="flex flex-col sm:flex-row justify-center lg:justify-start pt-3 sm:pt-5">
                     <div class="flex justify-center sm:justify-start items-center pl-0 md:pl-1">
-                        <p class="font-body text-white text-lg uppercase">Find Me Here</p>
+                        <p class="font-body text-white text-lg uppercase pt-4 sm:pt-0">Find Me Here</p>
                         <div class="hidden sm:block">
                             <i class='bx bx-chevron-right text-yellow text-3xl'></i>
                         </div>
