remove unused class

--- a/app/views/blog/posts/index.html.erb
+++ b/app/views/blog/posts/index.html.erb
@@ -10,7 +10,7 @@
           <%= render partial: 'meta', locals: { post: post } %>
 
           <div class="pt-8 prose max-w-full dark:text-primary-700" itemprop="articleBody">
-            <%= image_tag cdn_image_url(post.featured_image), class: ".post-thumbnail" if post.featured_image.attached? %>
+            <%= image_tag cdn_image_url(post.featured_image) if post.featured_image.attached? %>
             <%= markdown post.excerpt %>
             <% if post.more_text? %>
               <a href="<%= blog_posts_permalink_path(post) %>" class="flex items-center no-underline">
