--- a/app/views/shared/_contact_me.html.erb
+++ b/app/views/shared/_contact_me.html.erb
@@ -10,11 +10,17 @@
   <% # this invisible input is required for captcha %>
   <%= f.text_field :nickname, class: 'hidden invisible' %>
 
-  <div class="flex flex-col md:flex-row">
-    <%= f.text_field :name, placeholder: 'name', class: "w-full md:w-1/2 mr-3 lg:mr-5 font-body text-black px-4 py-3 border-grey-50 rounded" %>
-  </div>
-  <div class="flex flex-col md:flex-row">
-    <%= f.text_field :email, placeholder: 'email', class: "w-full md:w-1/2 mr-3 mt-6 lg:mr-5 md:mt-6 font-body text-black px-4 py-3 border-grey-50 rounded" %>
+  <div class="">
+    <div class="flex flex-col">
+      <div class="flex-auto">
+        <%= f.text_field :name, placeholder: 'name',   class: "w-full md:w-1/2 mr-3 lg:mr-5 font-body text-black px-4 py-3 border-grey-50 rounded" %>
+      </div>
+    </div>
+    <div class="flex flex-col">
+      <div class="flex-auto">
+        <%= f.text_field :email, placeholder: 'email', class: "w-full md:w-1/2 font-body text-black px-4 py-3 border-grey-50 rounded" %>
+      </div>
+    </div>
   </div>
 
   <%= f.text_area  :message, placeholder: 'message', class:"w-full font-body text-black px-4 py-3 border-grey-50 rounded mt-6 md:mt-8", cols: "30", rows: "10" %>
