remove hotwired/turbo

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -53,10 +53,10 @@ html[lang="en"]
     meta[name="twitter:card" content="summary_large_image"]
 
     - # staging/production require this
-    = stylesheet_pack_tag 'application', 'data-turbo-track': 'reload'
+    = stylesheet_pack_tag 'application'
 
     - # this is the webpack insertion point, including ALL tailwind CSS imported by application.js...so confusing
-    = javascript_pack_tag 'application', 'data-turbo-track': 'reload'
+    = javascript_pack_tag 'application'
 
     = yield :head
     = csrf_meta_tags
