--- a/app/views/blog/posts/index.html.erb
+++ b/app/views/blog/posts/index.html.erb
@@ -4,7 +4,7 @@
 ) %>
 
 <% content_for :head do %>
-  <%= javascript_pack_tag 'blog', 'data-turbo-track': 'reload' %>
+  <%= javascript_pack_tag 'blog' %>
 <% end %>
 
 <div class="dark:bg-primary-20">
