--- a/app/views/shared/_contact_me.html.erb
+++ b/app/views/shared/_contact_me.html.erb
@@ -1,6 +1,6 @@
 <% content_for :head do %>
-  <%= javascript_pack_tag 'contact-me', 'data-turbo-track': 'reload' %>
-  <%= stylesheet_pack_tag 'contact-me', 'data-turbo-track': 'reload' %>
+  <%= javascript_pack_tag 'contact-me' %>
+  <%= stylesheet_pack_tag 'contact-me' %>
 <% end %>
 
 <% form_classes ||= "" %>
