--- a/app/views/photography/index.html.slim
+++ b/app/views/photography/index.html.slim
@@ -3,8 +3,8 @@
 
 - content_for :page_title, 'Photography Gallery'
 - content_for :head do
-  = javascript_include_tag 'photography', 'data-turbo-track': 'reload'
-  = stylesheet_pack_tag 'photography', 'data-turbo-track': 'reload'
+  = javascript_include_tag 'packs/photography', 'data-turbo-track': 'reload'
+  = stylesheet_link_tag 'packs/photography', 'data-turbo-track': 'reload'
 
 - # thumbnail gallery
 div[class="my-gallery grid are-images-unloaded mt-16 sm:mt-20 lg:mt-18 xl:mt-20" itemscope="" itemtype="http://schema.org/ImageGallery"]
