--- a/app/views/home/_about.html.erb
+++ b/app/views/home/_about.html.erb
@@ -9,9 +9,9 @@
                 I have <%= (Time.now.year - 2011).humanize %> years of professional experience as a <span class="font-black">Software Engineer</span> at industry-leading companies in the San Francisco Bay Area.
             </p>
             <p class="font-body text-grey-20 dark:text-primary-900 pt-6 leading-relaxed">
-                At <span class="font-black">Lyft</span>, my team built a Simulation Platform which allows the business to handle thousands of rides per minute during our busiest moments.
+                At <span class="font-black">Lyft</span>, my team built a Simulation Platform that allows the business to handle thousands of rides per minute during our busiest moments.
                 At <span class="font-black">Teespring</span>, I led a team that created the online store platform which enables merchandise sales on YouTube.
-                At <span class="font-black">Onelogin</span>, I built an identity provider which enables mobile app single sign on.
+                At <span class="font-black">Onelogin</span>, I built an identity provider which enables mobile app single sign-on.
             </p>
             <p class="font-body text-grey-20 dark:text-primary-900 pt-6 leading-relaxed">
                 Unlike many developers who focus solely on technical ability,
