--- a/app/views/home/_work.html.erb
+++ b/app/views/home/_work.html.erb
@@ -34,7 +34,7 @@
                                 <div class="pt-2">
                                     <span class="font-body text-black dark:text-primary-1000 block">
                                         Built and maintained Simulated Rides and Acceptance Testing platforms, ensuring
-                                        Lyft can handle peak scale for the busiest moments.
+                                        Lyft can be reliable and scale to the highest traffic days of the year.
                                     </span>
                                 </div>
                             </div>
